Instanciating two cubes

--- a/QTOpenGL/QTOpenGL.vcxproj
+++ b/QTOpenGL/QTOpenGL.vcxproj
@@ -123,9 +123,13 @@
   <ItemGroup>
     <ClCompile Include="Mainer.cpp" />
     <ClCompile Include="MetapodGLWindow.cpp" />
+    <ClCompile Include="ShapeGenerator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MetapodGLWindow.h" />
+    <ClInclude Include="ShapeData.h" />
+    <ClInclude Include="ShapeGenerator.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="fragmentShaderCode.glsl" />
